<?php

declare(strict_types=1);

namespace App\Modules\Reviews\Infrastructure\Kafka;

use App\Modules\Reviews\Domain\Event\DomainEventPublisherInterface;

class ReviewDomainEventPublisher implements DomainEventPublisherInterface
{

}
